--- a/protocolo/capitulos/justificacion.tex
+++ b/protocolo/capitulos/justificacion.tex
@@ -1,10 +1,27 @@
 \section{Justificación}
 
+
+Este proyecto a los agricultores de Samalayuca al proporcionarles herramientas de bajo costo para tomar decisiones basadas en información. 
+Gracias a ellas podrán mejorar la calidad y cantidad de sus productos permitiéndoles satisfacer la creciente demanda de alimentos.
+
+La automatización dentro del invernadero contribuirá a su mejor manejo, disminuyendo así los costos de mano de obra.
+
+
+
+Además, el control y 
+monitoreo remoto les facilitará el trabajo al poder controlar desde c
+
+
+ les permitirá a los productores de Samalayuca disponer una alternativa de bajo costo para controlar y monitorear 
+
+Este proyecto a los productores de Samalayuca al disponer de una alternativa de bajo costo.
+
 %Un parrafo debe llevar almenos 2 oraciones
 [Expresa las razones por las cuáles crees/supones es necesario desarrollar el proyecto plasmado en esta propuesta. 
 Deberás describir y dimensionar la necesidad, problema u oportunidad en la cual se centra. 
 Se tiene que establecer la importancia y grado de generalización que puede hacerse de los resultados del proyecto, así como los beneficios derivados de su realización. 
-Aquí deberá incluirse el porqué vale la pena atender el problema, en qué pueden ayudar los resultados, y quiénes se beneficiarán de los mismos. También hay que incluir aquí el impacto que pueda tener en diferentes ámbitos, como el  tecnológico, académico, tecnológico, ecológico, económico,social, ambiental, y así, según corresponda. 
+Aquí deberá incluirse el porqué vale la pena atender el problema, en qué pueden ayudar los resultados, y quiénes se beneficiarán de los mismos. 
+También hay que incluir aquí el impacto que pueda tener en diferentes ámbitos, como el  tecnológico, académico, tecnológico, ecológico, económico, social, ambiental, y así, según corresponda. 
 Se presentan los beneficios que se obtendrían al lograr el objetivo del proyecto de investigación, demostrando por qué es necesario y significativo. 
 Ayuda a identificar las razones que motivan a la realización de este proyecto.]
 \begin{description}
