--- a/protocolo/capitulos/planteamiento.tex
+++ b/protocolo/capitulos/planteamiento.tex
@@ -8,6 +8,12 @@ La agricultura de precisión (PA por sus siglas en inglés) será clave para pod
 estrategia de manejo que implementa la recopilación de información, comunicación entre sistemas y técnicas de análisis de datos para apoyar la toma 
 de decisiones, por ejemplo: aplicación de fertilizantes, control de plagas, control de riego, identificación de enfermedades, entre otros \cite{appsremotesensing}.
 
+Actualmente existen varios sistemas en el mercado para el control y monitoreo de invernaderos o cuartos de producción. Estos sistemas ofrecen monitoreo de temperatura, humedad, CO2, 
+e intensidad de la luz, con un costo de \$2,159.90 USD y \$2,351.00 USD respectivamente \cite{intellidose_kit_2021}, \cite{smartbee_kit_2021}. Ambos sistemas se pueden conectar 
+a internet para realizar un monitoreo remoto, donde \cite{intellidose_kit_2021} necesitará una interfaz y una subscripción extra, añadiendo \$279.00 USD al costo. Existen otras 
+alternativas, como \cite{ceres_greenhouse_solutions_2021}, \cite{autogrow_climate_control_2021}, \cite{climate_control_2021} 
+% hacer u custom quote a esas citas
+
 La comunicación inalámbrica entre sistemas ha cambiado los estándares de comunicación a día de hoy y la agricultura no se ha quedado atrás. 
 "Para incrementar la eficiencia, productividad y reducir la intervención humana, tiempo y costo existe una necesidad de prestar atención a una
 nueva tecnología llamada Internet de las Cosas (\textit{IoT} por sus siglas en inglés)" \cite{agriculture_automation_review}. El IoT es la red de dispositivos 
@@ -31,8 +37,15 @@ a enfermedades y plagas, sin embargo, la humedad del ambiente influye en la apar
 es muy valioso contar con mediciones de temperatura cerca del cultivo. De esta manera se tienen datos más precisos que los que proveen los sitios/aplicaciones 
 meteorológicas \cite{olive_orchard_monitorization}.
 
-En la Universidad de Magdalena, Colombia se creó un sistema de bajo costo para monitoreo y control remoto de un invernadero utilizando lógica difusa \cite{low_cost_fuzzy_logic_greenhouse}. La utilización de lógica difusa en sistemas de control permite traducir variables a sets previamente definidos que contienen la 
-terminología difusa como muy frío, frío, caliente, muy caliente, etcétera. Gracias a esta traducción se pueden tomar acciones más precisas para realizar el control \cite{agriculture_automation_review}. El algoritmo difuso se implementó en un Arduino Mega para tomar acciones de control sobre la temperatura y humedad del ambiente, humedad del suelo e iluminación. Además, se diseño un sitio web para realizar el monitoreo y poder tomar acciones que sobre escriban a las decisiones tomadas por el sistema. Se probó la efectividad de la lógica difusa para controlar sistemas no lineales, además de optimizar el uso de recursos en un invernadero \cite{low_cost_fuzzy_logic_greenhouse}.
+En la Universidad de Magdalena, Colombia se creó un sistema de bajo costo para monitoreo y control remoto de un invernadero utilizando lógica difusa 
+\cite{low_cost_fuzzy_logic_greenhouse}. La utilización de lógica difusa en sistemas de control permite traducir variables a sets previamente definidos que contienen la 
+terminología difusa como muy frío, frío, caliente, muy caliente, etcétera. Gracias a esta traducción se pueden tomar acciones más precisas para realizar el 
+control \cite{agriculture_automation_review}. El algoritmo difuso se implementó en un Arduino Mega para tomar acciones de control sobre la temperatura y humedad 
+del ambiente, humedad del suelo e iluminación. Además, se diseño un sitio web para realizar el monitoreo y poder tomar acciones que sobre escriban a las decisiones 
+tomadas por el sistema. Se probó la efectividad de la lógica difusa para controlar sistemas no lineales, además de optimizar el uso de recursos en un 
+invernadero \cite{low_cost_fuzzy_logic_greenhouse}.
+
+% agregar mas antecedentes
 
 % buscar antecedentes de sistemas existentes que sean costosos para que la metrica sea el bajo costo del objetivo
 
