--- a/protocolo/main.tex
+++ b/protocolo/main.tex
@@ -28,17 +28,17 @@
 % \listoftables
 % \clearpage
 
-\include{capitulos/resumen}
-\include{capitulos/intro}
+% \include{capitulos/resumen}
+% \include{capitulos/intro}
 \include{capitulos/planteamiento}
-\include{capitulos/justificacion}
-\include{capitulos/marco_teorico}
 \include{capitulos/objetivo_general}
 \include{capitulos/objetivos_especificos}
-\include{capitulos/propuesta}
-\include{capitulos/alcance}
-\include{capitulos/metodologia}
-\include{capitulos/actividades}
+\include{capitulos/justificacion}
+\include{capitulos/propuesta_solucion}
+% \include{capitulos/marco_teorico}
+% \include{capitulos/alcance}
+% \include{capitulos/metodologia}
+% \include{capitulos/actividades}
 
 \bibliography{referencias}
 \bibliographystyle{ieeetr}
