--- a/protocolo/referencias.bib
+++ b/protocolo/referencias.bib
@@ -1,4 +1,41 @@
 
+
+@misc{intellidose_kit_2021,
+url = {https://shop.autogrow.com/products/intellidose-kit-with-pumps},
+journal = {Autogrow},
+year = {2021}
+}
+
+@misc{intelliclimate_kit_2021,
+url = {https://shop.autogrow.com/collections/frontpage/products/intelliclimate-kit},
+journal = {Autogrow},
+year = {2021}
+}
+
+@misc{smartbee_kit_2021,
+url = {https://store.smartbeecontrollers.com/environmental-base-system/},
+journal = {Smart Bee},
+year = {2021}
+}
+
+@misc{ceres_greenhouse_solutions_2021,
+url = {https://cerescann.com/environmental-control/},
+journal = {Ceres},
+year = {2021}
+}
+
+@misc{autogrow_climate_control_2021,
+url = {https://autogrow.com/our-products-solutions/climate-control},
+journal = {Autogrow},
+year = {2021}
+}
+
+@misc{climate_control_2021,
+url = {https://www.climatecontrol.com/climate-manager/},
+journal = {Climatecontrol},
+year = {2021}
+}
+
 @Article{s21010223,
 AUTHOR = {Sagheer, Alaa and Mohammed, Maged and Riad, Khaled and Alhajhoj, Mohammed},
 TITLE = {A Cloud-Based IoT Platform for Precision Control of Soilless Greenhouse Cultivation},
