--- a/protocolo/capitulos/marco_teorico.tex
+++ b/protocolo/capitulos/marco_teorico.tex
@@ -1,4 +1,45 @@
-\section{Marco teórico}
+% \section{Marco teórico}
 %\caption[Texto en lista de figuras sin cita]{Texto en título de imagen con cita.}
 
-[Presentar la teoría que va a fundamentar el proyecto con base en le planteamiento del problema que se ha realizado, los conceptos y conocimientos necesarios para desarrollar el proyecto. Se puede dividir en sub-secciones por cada concepto que se necesite, pero no olvides introducir antes con un párrafo.]
+% Presentar los conceptos necesarios para entender la investigacion
+
+% principalmente de la teoria (logica difusa, invernaderos)
+
+% en el marco teorico se describe de manera general los temas. por ejemplo, poner porque es importante medir la humedad en el invernadero y describir como funcionan algunos sensores
+% de humedad, como se mide, como se manda la señal (analoga o digital) etc
+
+% marco tecnologico - se puede describir cuales sensores o tecnologias se utilizaran
+
+% [Presentar la teoría que va a fundamentar el proyecto con base en le planteamiento del problema que se ha realizado, los conceptos y conocimientos necesarios para desarrollar el proyecto. Se puede dividir en sub-secciones por cada concepto que se necesite, pero no olvides introducir antes con un párrafo.]
+
+% buscar libros y tratar de parafrasear y definir con nuestras palabras los conceptos.
+% utilizar imagenes. toda imagen que aparezca tiene que estar descrita en el texto. Uitilizar etiquetas
+% y referencias
+
+% dejar las referencias para el final. En los antecedentes es importante el trabajo, por lo que se mencionan al principio.
+% aqui lo que importa es la informacion, por lo que s eponen al final.
+
+1. Agricultura
+2. Agricultura protegida % agregar los demas tipos?
+    2.1 Invernaderos
+        2.3 Plástico
+3. Agricultura de precisión
+    3.1 Importancia
+    3.2 Ventajas
+    3.2 Desventajas % costo
+    3.3 Tecnologías emergentes
+        3.3.1 IoT % arduinos y raspberry pis?
+            3.3.1.1 Protocolos de comunicación
+        3.3.2 Monitoreo
+            3.3.2.1 En sitio
+            3.3.2.2 Remoto
+        3.3.3 Control
+            3.3.3.1 Control automático
+            3.3.3.2 Control remoto
+            3.3.3.3 Control difuso
+                3.3.3.3.1 Lógica difusa
+4. Aplicaciones web % tecnologias que voy a usar? lenguajes? frameworks?
+    4.2 Bases de datos
+    4.3 APIs
+
+
