--- a/protocolo/capitulos/apendice.tex
+++ b/protocolo/capitulos/apendice.tex
@@ -1,4 +1,58 @@
 \section{Apéndice}
-[En esta sección opcional se incluye información secundaria o material importante que es muy extenso. El apéndice se coloca después de la literatura citada y no debe llevar introducción ni conclusión ni mayor explicación excepto su título y en el texto donde se hace referencia al apéndice. 
-Ejemplos de información que puede colocarse en el apéndice: código fuente completo, copia del  convenio con la maquila donde les estás desarrollando esta propuesta; una lista de ejemplares y los museos donde están depositados, los datos obtenidos de todas las repeticiones del experimento, derivaciones matemáticas extensas, todos los resultados del análisis estadístico (incluyendo quizás los no significativos) y mapas de distribución para cada caso estudiado. 
+\subsection{Encuesta realizada a agricultores de Samalayuca, Chihuahua.}
 
+\begin{figure}[!h]
+	\centering
+	\includegraphics[width=.95\linewidth]{imagenes/encuesta/pregunta_1.png}
+	\caption{Resultados de la pregunta ¿Cuenta con algún dispositivo para accesar a internet?}
+	\label{fig:pregunta_1}
+\end{figure}
+
+\begin{figure}[!h]
+	\centering
+	\includegraphics[width=.95\linewidth]{imagenes/encuesta/pregunta_2.png}
+	\caption{Resultados de la pregunta ¿Cuenta con un teléfono inteligente?}
+	\label{fig:pregunta_2}
+\end{figure}
+
+\begin{figure}[!h]
+	\centering
+	\includegraphics[width=1\linewidth]{imagenes/encuesta/pregunta_3.png}
+	\caption{Resultados de la pregunta ¿Cuenta con un sistema de riego automatizado?}
+	\label{fig:pregunta_3}
+\end{figure}
+
+\begin{figure}[!h]
+	\centering
+	\includegraphics[width=1\linewidth]{imagenes/encuesta/pregunta_4.png}
+	\caption{Resultados de la pregunta ¿Le gustaría contar con un sistema de riego automatizado?}
+	\label{fig:pregunta_4}
+\end{figure}
+
+\begin{figure}[!h]
+	\centering
+	\includegraphics[width=1\linewidth]{imagenes/encuesta/pregunta_5.png}
+	\caption{Resultados de la pregunta ¿Le gustaría contar con un sistema de ventilación automatizado?}
+	\label{fig:pregunta_5}
+\end{figure}
+
+\begin{figure}[!h]
+	\centering
+	\includegraphics[width=1\linewidth]{imagenes/encuesta/pregunta_6.png}
+	\caption{Parámetros considerados como los más importantes de monitorear.}
+	\label{fig:pregunta_6}
+\end{figure}
+
+\begin{figure}[!h]
+	\centering
+	\includegraphics[width=1\linewidth]{imagenes/encuesta/pregunta_7.png}
+	\caption{Resultados de la pregunta ¿Le interesaría poder monitorear sus cultivos y controlar el sistema desde su teléfono o computadora?}
+	\label{fig:pregunta_7}
+\end{figure}
+
+\begin{figure}[!h]
+	\centering
+	\includegraphics[width=1\linewidth]{imagenes/encuesta/pregunta_8.png}
+	\caption{Resultados de la pregunta ¿Cuánto estaría dispuesto a pagar por un sistema que monitoree y automatice el clima de un cultivo protegido?}
+	\label{fig:pregunta_8}
+\end{figure}
