--- a/protocolo/main.tex
+++ b/protocolo/main.tex
@@ -13,8 +13,9 @@
 \hyphenation{unicode}
 
 \date{\today}
+% el titulo debe ir orientado a que sera en la region de samalayuca
 \title{[TÍTULO DEL PROYECTO DE INVESTIGACIÓN]}
-\author{[Nombre del alumno]} 
+\author{Guillermo Joaquín Álvarez Ordóñez} 
 
 \begin{document}
 \include{capitulos/portada}
@@ -31,11 +32,9 @@
 % \include{capitulos/resumen}
 % \include{capitulos/intro}
 \include{capitulos/planteamiento}
-\include{capitulos/objetivo_general}
-\include{capitulos/objetivos_especificos}
-\include{capitulos/justificacion}
-\include{capitulos/propuesta_solucion}
-% \include{capitulos/marco_teorico}
+\input{capitulos/justificacion}
+\input{capitulos/propuesta_solucion}
+\include{capitulos/marco_teorico}
 % \include{capitulos/alcance}
 % \include{capitulos/metodologia}
 % \include{capitulos/actividades}
