--- a/protocolo/referencias.bib
+++ b/protocolo/referencias.bib
@@ -1,39 +1,102 @@
-
-
-@misc{intellidose_kit_2021,
-url = {https://shop.autogrow.com/products/intellidose-kit-with-pumps},
-journal = {Autogrow},
-year = {2021}
-}
-
 @misc{intelliclimate_kit_2021,
-url = {https://shop.autogrow.com/collections/frontpage/products/intelliclimate-kit},
-journal = {Autogrow},
+author = "{Autogrow}",
+title = {{Intelliclimate Kit}},
+howpublished = {\url{https://shop.autogrow.com/collections/frontpage/products/intelliclimate-kit}},
+note = {Online; accessed March 10, 2021},
 year = {2021}
 }
 
 @misc{smartbee_kit_2021,
-url = {https://store.smartbeecontrollers.com/environmental-base-system/},
-journal = {Smart Bee},
+author = "{Smart Bee}",
+title = {{Environmental Base System}},
+howpublished = {\url{https://store.smartbeecontrollers.com/environmental-base-system/}},
+note = {Online; accessed March 10, 2021},
 year = {2021}
 }
 
 @misc{ceres_greenhouse_solutions_2021,
-url = {https://cerescann.com/environmental-control/},
-journal = {Ceres},
+author = "{CERES Greenhouse Solutions}",
+title = {{Greenhouse environmental control}},
+howpublished = {\url{https://cerescann.com/environmental-control/}},
+note = {Online; accessed March 10, 2021},
 year = {2021}
 }
 
 @misc{autogrow_climate_control_2021,
-url = {https://autogrow.com/our-products-solutions/climate-control},
-journal = {Autogrow},
+author = "{Autogrow}",
+title = {{Climate controllers}},
+howpublished = {\url{https://autogrow.com/our-products-solutions/climate-control}},
+note = {Online; accessed March 10, 2021},
 year = {2021}
 }
 
 @misc{climate_control_2021,
-url = {https://www.climatecontrol.com/climate-manager/},
-journal = {Climatecontrol},
+author = "{Climate Control Systems}",
+title = {{Climate manager}},
+howpublished = {\url{https://www.climatecontrol.com/climate-manager/}},
+note = {Online; accessed March 10, 2021},
 year = {2021}
+}
+
+@article{wsn_greenhouse_gases,
+abstract = {—The rapid development and miniaturization of sensor devices, and the recent advances in wireless communication and networking technologies, are allowing scientists and engineers to develop networks of small sensors that can be used to continuously monitor the health and stability of the environment we live in. Wireless Sensor Networks (WSNs) consist of a number of spatially distributed sensors with computing, processing and communication capabilities that can continuously sense and transmit data to a base station, where data can be processed and observed in real time. This project provides a detailed study and implementation of a WSN for real time and continuous environmental monitoring of greenhouse gases. A tree-topology WSN consisting of two sensor nodes and a base station was successfully built and tested using open source and inexpensive hardware to measure the concentration level of several greenhouse gases. The sensor nodes consisted of carbon monoxide sensor, a carbon dioxide sensor, a methane sensor, a temperature sensor, a GPS module and a ZigBee wireless transmitter packaged together. The GPS module was added to give information about the location of the sensors. The base stations consisted of an Arduino Uno micro-controller and a ZigBee receiver that can collect data from the various sensors and submit to a sink base station where data can be stored and processed. A website was developed where the captured data can be continuously monitored and displayed in real time. Keywords—Environmental Monitoring, IEEE 802.15., Wireless Sensor Networks, Wi-Fi, ZigBee Communication.},
+author = {Lambebo, Ashenafi and Haghani, Sasan},
+isbn = {9781424442232},
+journal = {ASEE 2014 ZONE 1 Conference},
+keywords = {15,environmental monitoring,ieee 802,sensor networks,wi-fi,wireless,zigbee communication},
+mendeley-groups = {tesis},
+pages = {4},
+title = {{A Wireless Sensor Network for Environmental Monitoring of Greenhouse Gases}},
+year = {2014}
+}
+
+@article{fuzzy_greenhouse_experimentaly_validated,
+abstract = {The agricultural greenhouse presents a complicated procedure since the strong perturbations and the important number of its input parameters, which have a great potential and capacity to influence the climate inside it. For this reason, a Fuzzy Logic Controller (FLC) is developed in order to promote a suitable microclimate by activating the appropriate actuators installed inside the greenhouse with the appropriate rate. The dynamic modeling of the studied greenhouse is presented and simulated under MATLAB/Simulink environment to be experimentally validated within the Research and Technology Center of Energy (CRTEn) in Tunisia. The simulation results illustrate the effectiveness of the proposed dynamic model to investigate the internal air temperature and relative humidity with a low percentage of error. In addition, the developed controller FLC presents an effective solution to get an optimized microclimate indoor the agricultural greenhouse.},
+author = {{Ben Ali}, Rim and Bouadila, Salwa and Mami, Abdelkader},
+doi = {10.1016/j.applthermaleng.2018.06.014},
+file = {:Users/memo/Documents/articulos/Development of a Fuzzy Logic Controller applied to an agricultural greenhouse experimentally validated.pdf:pdf},
+issn = {13594311},
+journal = {Applied Thermal Engineering},
+keywords = {Agricultural greenhouse,Air temperature,Fuzzy Logic Controller,MATLAB/Simulink environment,Microclimate,Relative humidity},
+mendeley-groups = {tesis},
+number = {February 2017},
+pages = {798--810},
+publisher = {Elsevier},
+title = {{Development of a Fuzzy Logic Controller applied to an agricultural greenhouse experimentally validated}},
+url = {https://doi.org/10.1016/j.applthermaleng.2018.06.014},
+volume = {141},
+year = {2018}
+}
+
+@article{fuzzy_systems_agriculture,
+abstract = {Conventional farming is labor-consuming and the need to continuously monitor crops can be a burden for farmers. By realizing the concept of smart farming based on Internet of Things (IoT) technology, farmers can use a mobile application to observe and monitor air humidity, air temperature, and soil moisture-factors that can affect plant growth. Furthermore, the use of timers to control the pumps in conventional watering systems is not always practical in real-life cases. This paper proposes a framework that enables advanced fuzzy logic to control a pump's switching time according to user-defined variables, whereby sensors are the main aspect of and contributor to the system. Our proposed idea offers great potential for excellent performance as an interface between the sensors as the input and the IoT as the output medium. A comparison is made between the proposed system and manual handling. The results prove that the water consumption and watering time has been reduced significantly.},
+author = {Abdullah, Noramalina and Durani, Noor Aerina Binti and Shari, Mohamad Farid Bin and Siong, King Soon and Hau, Vicky Kong Wei and Siong, Wong Ngei and Ahmad, Ir Khairul Azman},
+doi = {10.1109/ACCESS.2020.3041597},
+file = {:Users/memo/Documents/articulos/Towards Smart Agriculture Monitoring Using Fuzzy Systems .pdf:pdf},
+issn = {21693536},
+journal = {IEEE Access},
+keywords = {Fuzzy logic,Internet of Things,monitoring system,sensors},
+mendeley-groups = {tesis},
+pages = {4097--4111},
+title = {{Towards Smart Agriculture Monitoring Using Fuzzy Systems}},
+volume = {9},
+year = {2021}
+}
+
+@article{fuzzy_hydroculture_system,
+abstract = {Limited agricultural land due to increasing development leads to a decline in agricultural production capacity. Therefore, a new solution for modern agriculture is needed to overcome this problem. Technology is useful for modern agriculture, such as the use of IoT for hydroponic farming systems. By using IoT with a smart controlling system, the hydroponic agriculture becomes easier. With the use of IoT in this research, nutrition, pH management, and temperature can be controlled easily. This research also uses fuzzy logic to make the decision making in the control system more efficient and precise. The results of experiments with bok choy and lettuce indicate that the system automatically measures the nutritional value and pH according to the time specified. Then, the system will immediately adjust the value of nutrient content and pH within the specified range. Smart control system shows better plant growth which can be seen from the growth of the leaves' width, length and plant's height.},
+author = {Herman and Surantha, Nico},
+doi = {10.24507/ijicic.16.01.207},
+file = {:Users/memo/Documents/articulos/SMART HYDROCULTURE CONTROL SYSTEM BASED ON IOT AND FUZZY LOGIC.pdf:pdf},
+issn = {13494198},
+journal = {International Journal of Innovative Computing, Information and Control},
+keywords = {Fuzzy logic,Hydroponics,IoT,Smart controlling systems,Urban farming},
+mendeley-groups = {tesis},
+number = {1},
+pages = {207--221},
+title = {{Smart hydroculture control system based on IoT and fuzzy logic}},
+volume = {16},
+year = {2020}
 }
 
 @Article{s21010223,
@@ -108,7 +171,7 @@ DOI = {10.3390/s20154231}
   publisher={Washington, DC: World Bank}, 
   author={Wik, Mette and Pingali, Prabhu and Brocai, Sumiter}, 
   year={2008}, 
-  month={Dec}
+  month={December}
 } 
 
 @article{agriculture_automation_review,
@@ -140,6 +203,22 @@ number = {5},
 pages = {3758--3773},
 title = {An Overview of Internet of Things (IoT) and Data Analytics in Agriculture: Benefits and Challenges},
 volume = {5},
+year = {2018}
+}
+
+@article{fuzzy_logic_controller,
+abstract = {The agricultural greenhouse presents a complicated procedure since the strong perturbations and the important number of its input parameters, which have a great potential and capacity to influence the climate inside it. For this reason, a Fuzzy Logic Controller (FLC) is developed in order to promote a suitable microclimate by activating the appropriate actuators installed inside the greenhouse with the appropriate rate. The dynamic modeling of the studied greenhouse is presented and simulated under MATLAB/Simulink environment to be experimentally validated within the Research and Technology Center of Energy (CRTEn) in Tunisia. The simulation results illustrate the effectiveness of the proposed dynamic model to investigate the internal air temperature and relative humidity with a low percentage of error. In addition, the developed controller FLC presents an effective solution to get an optimized microclimate indoor the agricultural greenhouse.},
+author = {{Ben Ali}, Rim and Bouadila, Salwa and Mami, Abdelkader},
+doi = {10.1016/j.applthermaleng.2018.06.014},
+issn = {13594311},
+journal = {Applied Thermal Engineering},
+keywords = {Agricultural greenhouse,Air temperature,Fuzzy Logic Controller,MATLAB/Simulink environment,Microclimate,Relative humidity},
+number = {February 2017},
+pages = {798--810},
+publisher = {Elsevier},
+title = {{Development of a Fuzzy Logic Controller applied to an agricultural greenhouse experimentally validated}},
+url = {https://doi.org/10.1016/j.applthermaleng.2018.06.014},
+volume = {141},
 year = {2018}
 }
 
