--- a/protocolo/capitulos/apendice.tex
+++ b/protocolo/capitulos/apendice.tex
@@ -1,58 +1,59 @@
 \section{Apéndice}
 \subsection{Encuesta realizada a agricultores de Samalayuca, Chihuahua.}
+\label{encuesta}
 
 \begin{figure}[!h]
 	\centering
 	\includegraphics[width=.95\linewidth]{imagenes/encuesta/pregunta_1.png}
 	\caption{Resultados de la pregunta ¿Cuenta con algún dispositivo para accesar a internet?}
-	\label{fig:pregunta_1}
+	\label{fig:pregunta_1_tiene_internet}
 \end{figure}
 
 \begin{figure}[!h]
 	\centering
 	\includegraphics[width=.95\linewidth]{imagenes/encuesta/pregunta_2.png}
 	\caption{Resultados de la pregunta ¿Cuenta con un teléfono inteligente?}
-	\label{fig:pregunta_2}
+	\label{fig:pregunta_2_tiene_telefono}
 \end{figure}
 
 \begin{figure}[!h]
 	\centering
 	\includegraphics[width=1\linewidth]{imagenes/encuesta/pregunta_3.png}
 	\caption{Resultados de la pregunta ¿Cuenta con un sistema de riego automatizado?}
-	\label{fig:pregunta_3}
+	\label{fig:pregunta_3_cuenta_con_sist_riego}
 \end{figure}
 
 \begin{figure}[!h]
 	\centering
 	\includegraphics[width=1\linewidth]{imagenes/encuesta/pregunta_4.png}
 	\caption{Resultados de la pregunta ¿Le gustaría contar con un sistema de riego automatizado?}
-	\label{fig:pregunta_4}
+	\label{fig:pregunta_4_quiere_sist_riego}
 \end{figure}
 
 \begin{figure}[!h]
 	\centering
 	\includegraphics[width=1\linewidth]{imagenes/encuesta/pregunta_5.png}
 	\caption{Resultados de la pregunta ¿Le gustaría contar con un sistema de ventilación automatizado?}
-	\label{fig:pregunta_5}
+	\label{fig:pregunta_5_quiere_sist_vent}
 \end{figure}
 
 \begin{figure}[!h]
 	\centering
 	\includegraphics[width=1\linewidth]{imagenes/encuesta/pregunta_6.png}
 	\caption{Parámetros considerados como los más importantes de monitorear.}
-	\label{fig:pregunta_6}
+	\label{fig:pregunta_6_parametros}
 \end{figure}
 
 \begin{figure}[!h]
 	\centering
 	\includegraphics[width=1\linewidth]{imagenes/encuesta/pregunta_7.png}
 	\caption{Resultados de la pregunta ¿Le interesaría poder monitorear sus cultivos y controlar el sistema desde su teléfono o computadora?}
-	\label{fig:pregunta_7}
+	\label{fig:pregunta_7_quiere_monitorear_remoto}
 \end{figure}
 
 \begin{figure}[!h]
 	\centering
 	\includegraphics[width=1\linewidth]{imagenes/encuesta/pregunta_8.png}
 	\caption{Resultados de la pregunta ¿Cuánto estaría dispuesto a pagar por un sistema que monitoree y automatice el clima de un cultivo protegido?}
-	\label{fig:pregunta_8}
+	\label{fig:pregunta_8_cuanto_pagaria}
 \end{figure}
