--- a/protocolo/capitulos/justificacion.tex
+++ b/protocolo/capitulos/justificacion.tex
@@ -1,42 +1,11 @@
 \section{Justificación}
 
+% ayudaria, contribuiria utilizar este tipo de verbos copreterito
 
-Este proyecto a los agricultores de Samalayuca al proporcionarles herramientas de bajo costo para tomar decisiones basadas en información. 
-Gracias a ellas podrán mejorar la calidad y cantidad de sus productos permitiéndoles satisfacer la creciente demanda de alimentos.
+% la primera oración sigue en pareciendo problema.
+Gracias a la creciente demanda de alimentos \cite{wik_pingali_brocai_2008}, es imperativo que los agricultores de Samalayuca, Chihuahua, cuenten con herramientas de bajo costo que les permitan tomar decisiones basadas en información. El monitoreo constante de los parámetros que tienen mayor influencia sobre el cultivo les ayudará a identificar situaciones que puedan fomentar la aparición de enfermedades. Asimismo, la automatización de tareas que demandan constancia y precisión, como lo son el riego y el control del clima, contribuirá a la estabilización de estos parámetros, disminuyendo el estrés provocado en las plantas. Esto permitirá que los agricultores locales puedan competir contra extranjeros que producen en ambientes controlados y automatizados. 
 
-La automatización dentro del invernadero contribuirá a su mejor manejo, disminuyendo así los costos de mano de obra.
-
-
-
-Además, el control y 
-monitoreo remoto les facilitará el trabajo al poder controlar desde c
-
-
- les permitirá a los productores de Samalayuca disponer una alternativa de bajo costo para controlar y monitorear 
-
-Este proyecto a los productores de Samalayuca al disponer de una alternativa de bajo costo.
-
-%Un parrafo debe llevar almenos 2 oraciones
-[Expresa las razones por las cuáles crees/supones es necesario desarrollar el proyecto plasmado en esta propuesta. 
-Deberás describir y dimensionar la necesidad, problema u oportunidad en la cual se centra. 
-Se tiene que establecer la importancia y grado de generalización que puede hacerse de los resultados del proyecto, así como los beneficios derivados de su realización. 
-Aquí deberá incluirse el porqué vale la pena atender el problema, en qué pueden ayudar los resultados, y quiénes se beneficiarán de los mismos. 
-También hay que incluir aquí el impacto que pueda tener en diferentes ámbitos, como el  tecnológico, académico, tecnológico, ecológico, económico, social, ambiental, y así, según corresponda. 
-Se presentan los beneficios que se obtendrían al lograr el objetivo del proyecto de investigación, demostrando por qué es necesario y significativo. 
-Ayuda a identificar las razones que motivan a la realización de este proyecto.]
-\begin{description}
-\item [Impacto Social:] [explica
-\dots]
-
-
-\item [Impacto Tecnológico:]
-[explica
-\dots]
-
-\item [Impacto Académico:] 
-[explica \dots]
-
-\vdots
-
-
-\end{description}
+Esta solución podrá ser fácilmente replicada en otros invernaderos donde exista un clima similar. Para regiones con climas distintos, se podrán adaptar las reglas de control para las necesidades particulares de la región. Asimismo, este sistema continuará siendo atractivo para quienes busquen una solución de bajo costo.
+% enfatizar que un potencial de la solucion puede ayudar a muchas mas personas
+% tambien se puede agregar que lo que se haga en samalayuca se puede replicar en regiones de climas y economias similares
+% donde el factor costo tambien sea una limitante
