outline marco teórico

--- a/protocolo/capitulos/marco_teorico.tex
+++ b/protocolo/capitulos/marco_teorico.tex
@@ -19,27 +19,19 @@
 % dejar las referencias para el final. En los antecedentes es importante el trabajo, por lo que se mencionan al principio.
 % aqui lo que importa es la informacion, por lo que s eponen al final.
 
-1. Agricultura
-2. Agricultura protegida % agregar los demas tipos?
-    2.1 Invernaderos
-        2.3 Plástico
-3. Agricultura de precisión
+% TODO: El marco teorico es mas para 
+
+1. Agricultura de precision
+    1.1 Intro (hablar general de la agricultura, invernaderos y agricultura protegida)
     3.1 Importancia
     3.2 Ventajas
     3.2 Desventajas % costo
-    3.3 Tecnologías emergentes
-        3.3.1 IoT % arduinos y raspberry pis?
-            3.3.1.1 Protocolos de comunicación
-        3.3.2 Monitoreo
-            3.3.2.1 En sitio
-            3.3.2.2 Remoto
-        3.3.3 Control
-            3.3.3.1 Control automático
-            3.3.3.2 Control remoto
-            3.3.3.3 Control difuso
-                3.3.3.3.1 Lógica difusa
-4. Aplicaciones web % tecnologias que voy a usar? lenguajes? frameworks?
+2. Hardware 
+    IoT, arduinos sensores
+3. Control
+    Intro (teoria del control, control automatico, control difuso)
+    3.1 Logica difusa
+4. Aplicaciones web
     4.2 Bases de datos
     4.3 APIs
-
 
