--- a/protocolo/capitulos/metodologia.tex
+++ b/protocolo/capitulos/metodologia.tex
@@ -1,5 +1,17 @@
 \section{Metodología}
-[En esta sección se especifican los pasos, basados en el método científico o desarrollo de software, necesarios para alcanzar el objetivo planteado. 
-Cada paso debe de incluir una breve definición, así como una descripción de cómo se realizará.
-Establece de forma organizada y precisa el procedimiento o fases que se han de seguir para llevar a buen término la investigación planteada. 
-Esta debe ser  clara, detallada y consecuente con la realización del proyecto y para el cumplimiento de los objetivos y metas.]
+
+Modelo en cascada
+
+Análisis 
+    - Los parámetros que les importan a los agricultores los puedo sacar de unas encuestas
+Diseño
+    - Agregar imágenes de los sensores y agregar diagramas de la arquitectura que tendrá el sistema
+Implementación
+    - El microcontrolador se programará en Arduino, los datos se enviarán a través de HTTP
+    - En el rapberry puedo usar python (dependerá de las librerías de lógica difusa)
+    - En el servidor en la nube se utilizará un api en nodejs y se guardarán los datos en Mongo
+    - Para el front se va a utilizar Vuejs, el cual consultará los datos al API en la nube (se va a usar NGINX como servidor web)
+
+    - 
+
+
